resized search bar slider text, corrected color for contrast

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -80,3 +80,8 @@ $custom-checkbox-indicator-indeterminate-bg: $accent;
   border-radius: 50px;
   padding: 0.375rem 1.75rem;
 }
+
+.slider-distance {
+  font-size: 1.6rem;
+  color: $secondary;
+}
